--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+.App{
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: rgb(101, 101, 101);
+}
+h1{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.add_todo{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-bottom: 10px;
+}
+input{
+  padding: 5px;
+  flex-grow: 1;
+}
+button{
+  padding: 7px 10px;
+  background-color: green;
+  border: none;
+  cursor: pointer;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+.todo_list{
+  list-style: none;
+  padding: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #fff;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+li.completed{
+  text-decoration: line-through;
+  opacity: .5;
+}
+
+.tog_del button{
+  background-color: red;
+  margin-right: 5px;
 }
